// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultichainBridgeQuoteCard should not render when there is a quote fetch error 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should not render when there is no quote 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should render a quote with MM fee 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          style="width: 32px;"
        >
          0:30
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = 0.999 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $0.0002
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        Relayer fee
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="relayer-fees"
      >
        $2.52
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          -
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        13.98 USDC
      </p>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
    data-testid="bridge-cta-info-text"
  >
    <p
      class="mm-box mm-text mm-text--body-xs mm-box--color-text-alternative"
    >
      Includes 0.875% MetaMask fee
    </p>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render gas sponsored text when gasSponsored is true 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          style="width: 32px;"
        >
          0:30
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = 0.999 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        data-testid="network-fees-sponsored"
      >
        <div
          class="mm-box mm-tag mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-success-muted mm-box--rounded-sm"
        >
          <p
            class="text-success-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          >
            Paid by MetaMask
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        Relayer fee
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="relayer-fees"
      >
        $2.52
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          -
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        13.98 USDC
      </p>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render price impact warnings: .06 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
>
  <button
    aria-label="Read price impact warning details"
    class="inline-flex items-center justify-center p-0 h-6 w-6 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-warning-default"
    data-testid="price-impact-warning-button"
  >
    <svg
      class="inline-block w-5 h-5 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m-.75-7.5V7.5a.75.75 0 0 1 1.5 0v5.25a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15a1.125 1.125 0 0 1 1.125 1.125"
      />
    </svg>
  </button>
  <p
    class="text-warning-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
  >
    6.0%
  </p>
</div>
`;

exports[`MultichainBridgeQuoteCard should render price impact warnings: .26 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
>
  <button
    aria-label="Read price impact warning details"
    class="inline-flex items-center justify-center p-0 h-6 w-6 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-error-default"
    data-testid="price-impact-warning-button"
  >
    <svg
      class="inline-block w-5 h-5 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22.2 17.633 14.002 3.396a2.32 2.32 0 0 0-4.004 0L1.8 17.633a2.2 2.2 0 0 0 0 2.224A2.28 2.28 0 0 0 3.802 21h16.396a2.28 2.28 0 0 0 2-1.143 2.2 2.2 0 0 0 .002-2.224m-1.3 1.473a.8.8 0 0 1-.702.394H3.802a.8.8 0 0 1-.702-.394.71.71 0 0 1 0-.724L11.3 4.146a.82.82 0 0 1 1.406 0l8.198 14.238a.71.71 0 0 1-.003.723M11.25 13.5V9.75a.75.75 0 0 1 1.5 0v3.75a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15.75a1.125 1.125 0 0 1 1.125 1.125"
      />
    </svg>
  </button>
  <p
    class="text-error-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
  >
    26%
  </p>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote (no MM fee) 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          style="width: 32px;"
        >
          0:30
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = 0.999 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $0.0002
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        Relayer fee
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="relayer-fees"
      >
        $2.52
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          -
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        13.98 USDC
      </p>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote while loading new quotes 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          style="width: 32px;"
        >
          0:30
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 ETH = 2,444 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $0.0003
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        Relayer fee
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="relayer-fees"
      >
        $2.52
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        >
          Price impact
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        >
          2.0%
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class=""
        >
          <div
            class="flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        14.44 USDC
      </p>
    </div>
  </div>
</div>
`;
